--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "http://127.0.0.1:5002",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^7.2.6",
     "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
